--- a/file/war3map.w3a.ini
+++ b/file/war3map.w3a.ini
@@ -3825,7 +3825,7 @@ ResearchArt = "ReplaceableTextures\\CommandButtons\\BTNMetamorphosis.blp"
 -- 提示工具 - 学习
 Researchtip = "学习|cffff0000雷神幻灭|r(|cffffcc00R|r)"
 -- 提示工具 - 学习 - 扩展
-Researchubertip = "立即变身成为恶魔形态|cffffcc00（该效果无需通过天庭）|r，坐拥逆天能力，惊雷行驶，令敌人胆魄。|n|cffffcc001.从此刻开始计算，攻击能秒杀一切HP低于50%，且曾经被你秒杀过的单位类型（英雄除外）。|n2.右键一个地方能立即到达该地方且不耗魔，但是没有伤害。|n3.遇到一个从未遇到过的敌方单位，以伤害他或者他伤害你开始，能5s内不受其伤害(除了能杀掉你的伤害)，且能对他造成2倍伤害。|r"
+Researchubertip = "湮灭坐拥逆天能力，惊雷行驶，令敌人胆魄。|n|n|cffffff00效果1：|r使用|cffffff00雷神唤影|r时,会在目标创建一个持续4s雷神残影,每次攻击伤害|cffff6800为（力量+敏捷X1.8+智力X1.2）X（等级的平方根）X 0.4 点,最多同时攻击5个目标.残影上限为5个.|r|n|cffffff00效果2：|r右键一个地方能立即到达该地方且不耗魔，但是没有伤害。|n|cffffff00效果3：|r遇到一个从未遇到过的敌方单位，以伤害他或者他伤害你开始|cffff6800，能5s内不受其伤害(除了能杀掉你的伤害)，且能对他造成2倍伤害。|r"
 -- 效果 - 目标
 TargetArt = ""
 -- 效果 - 目标附加点1
@@ -3833,7 +3833,7 @@ Targetattach = ""
 -- 提示工具 - 普通
 Tip = "|cffff0000雷神幻灭|r"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "立即变身成为恶魔形态|cffffcc00（该效果无需通过天庭）|r，坐拥逆天能力，惊雷行驶，令敌人胆魄。|n|cffffcc001.从此刻开始计算，攻击能秒杀一切HP低于50%，且曾经被你秒杀过的单位类型（英雄除外）。|n2.右键一个地方能立即到达该地方且不耗魔，但是没有伤害。|n3.遇到一个从未遇到过的敌方单位，以伤害他或者他伤害你开始，能5s内不受其伤害(除了能杀掉你的伤害)，且能对他造成2倍伤害。|r"
+Ubertip = "湮灭坐拥逆天能力，惊雷行驶，令敌人胆魄。|n|n|cffffff00效果1：|r使用|cffffff00雷神唤影|r时,会在目标创建一个持续4s雷神残影,每次攻击伤害|cffff6800为（力量+敏捷X1.8+智力X1.2）X（等级的平方根）X 0.4 点,最多同时攻击5个目标.残影上限为5个.|r|n|cffffff00效果2：|r右键一个地方能立即到达该地方且不耗魔，但是没有伤害。|n|cffffff00效果3：|r遇到一个从未遇到过的敌方单位，以伤害他或者他伤害你开始|cffff6800，能5s内不受其伤害(除了能杀掉你的伤害)，且能对他造成2倍伤害。|r"
 -- 等级
 levels = 1
 -- 等级要求
@@ -3936,11 +3936,11 @@ Researchhotkey = "E"
 -- 提示工具 - 学习
 Researchtip = "学习|cFF3333FF雷神寂灭|r(|cffffcc00E|r)"
 -- 提示工具 - 学习 - 扩展
-Researchubertip = "湮灭在极其敏捷的身手下，也不失强大的攻击能力。|n|n|cffff9900在每次对敌人造成伤害的时候，若该伤害低于目标的2%的HP上限，对目标使用“|r|cff6699ff雷神光线|r|cffff9900”。（冷却8.5s）|n|r|cffff6699魔法值低于200时不会释放。|n|r|cffff9900|n在雷神唤影闪到目标的时候，对300范围的敌人造成（力量+敏捷X1.8+智力X1.2）X（等级的平方根）X25%|r点伤害,伤害具有0.25s的冷却时间。|n"
+Researchubertip = "湮灭在极其敏捷的身手下，也不失强大的攻击能力。|n|n|cffffff00效果1：|r|cffff9900在每次对敌人造成伤害的时候，若该伤害低于目标的2%的HP上限，对目标使用“|r|cff6699ff雷神光线|r|cffff9900”。（冷却8.5s）|n|r|cffff6699魔法值低于200时不会释放。|r|cffff9900|n|r|cffffff00效果2：|r|cffff9900在雷神唤影闪到目标的时候，对300范围的敌人造成（力量+敏捷X1.8+智力X1.2）X（等级的平方根）X25%|r点伤害,伤害具有0.25s的冷却时间。"
 -- 提示工具 - 普通
 Tip = "|cFF3333FF雷神寂灭|r"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "湮灭在极其敏捷的身手下，也不失强大的攻击能力。|n|n|cffff9900在每次对敌人造成伤害的时候，若该伤害低于目标的2%的HP上限，对目标使用“|r|cff6699ff雷神光线|r|cffff9900”。（冷却8.5s）|n|r|cffff6699魔法值低于200时不会释放。|n|r|cffff9900|n在雷神唤影闪到目标的时候，对300范围的敌人造成（力量+敏捷X1.8+智力X1.2）X（等级的平方根）X25%|r点伤害,伤害具有0.25s的冷却时间。|n"
+Ubertip = "湮灭在极其敏捷的身手下，也不失强大的攻击能力。|n|n|cffffff00效果1：|r|cffff9900在每次对敌人造成伤害的时候，若该伤害低于目标的2%的HP上限，对目标使用“|r|cff6699ff雷神光线|r|cffff9900”。（冷却8.5s）|n|r|cffff6699魔法值低于200时不会释放。|r|cffff9900|n|r|cffffff00效果2：|r|cffff9900在雷神唤影闪到目标的时候，对300范围的敌人造成（力量+敏捷X1.8+智力X1.2）X（等级的平方根）X25%|r点伤害,伤害具有0.25s的冷却时间。"
 -- 等级
 levels = 1
 -- 等级要求
@@ -19603,25 +19603,6 @@ Name = "凤凰火焰(翅膀)"
 -- 提示工具 - 普通
 Tip = "凤凰火焰(翅膀)"
 
-[AQ00]
-_parent = "Apxf"
--- 魔法施放时间间隔
-Cool = 6.000
--- 初始伤害
-DataA = 1.0000
--- 每秒伤害
-DataB = 1.0000
--- 持续时间 - 普通
-Dur = 0.0100
--- 持续时间 - 英雄
-HeroDur = 0.0100
--- 效果 - 投射物图像
-Missileart = "Abilities\\Spells\\Undead\\DeathCoil\\DeathCoilMissile.mdl"
--- 名字
-Name = "凤凰火焰(泣罗刹爆炸)"
--- 提示工具 - 普通
-Tip = "凤凰火焰(泣罗刹爆炸)"
-
 [A0AP]
 _parent = "ANca"
 -- 分裂伤害参数
@@ -21420,11 +21401,11 @@ Researchhotkey = "R"
 -- 提示工具 - 学习
 Researchtip = "学习|cffff00ff泣罗刹|r(|cffffcc00R|r)"
 -- 提示工具 - 学习 - 扩展
-Researchubertip = "|cffff6800黑阎|r吞噬着大量祭品之魂，其魂也附于其中。遇敌之后，刹那瞬间，万千圣魂会侵蚀敌人，让其也化为这祭品中的一份。|n|n|cffffff00效果1：|r当自身受到必死伤害时，若自己存在有祭品，会杀死该祭品来免疫这次伤害，并|cffffff00无敌0.1s,回复5%生命|r。|n|cffff99cc魔法值低于600时无效。|r|n|cffffff00效果2：|r当祭品死亡时，会爆炸造成600范围的|cffff9900（力量X1.8+敏捷+智力X1.2）X（等级的平方根）X10%|r的伤害。|n|cffffff00效果3（主动效果）：|r在后面60秒内，产生的祭品数量将会暂时性的x3，冷却180s。|n|cff3366ff祭品上限+6|r"
+Researchubertip = "|cffff6800黑阎|r吞噬着大量祭品之魂，其魂也附于其中。遇敌之后，刹那瞬间，万千圣魂会侵蚀敌人，让其也化为这祭品中的一份。|n|n|cffffff00效果1：|r当自身受到必死伤害时，若自己存在有祭品，会杀死该祭品来免疫这次伤害，并|cffffff00无敌0.1s,回复5%生命|r。|n|cffff99cc魔法值低于600时无效。|r|n|cffffff00效果2：|r当祭品死亡时，会对600范围的随机一个敌人造成|cffff9900（力量X1.8+敏捷+智力X1.2）X（等级的平方根）X30%|r的伤害。|n|cffffff00效果3（主动效果）：|r在后面60秒内，产生的祭品数量将会暂时性的x3，冷却180s。|n|cff3366ff祭品上限+6|r"
 -- 提示工具 - 普通
 Tip = "|cffff00ff泣罗刹|r(|cffffcc00R|r)"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "|cffff6800黑阎|r吞噬着大量祭品之魂，其魂也附于其中。遇敌之后，刹那瞬间，万千圣魂会侵蚀敌人，让其也化为这祭品中的一份。|n|n|cffffff00效果1：|r当自身受到必死伤害时，若自己存在有祭品，会杀死该祭品来免疫这次伤害，并|cffffff00无敌0.1s,回复5%生命|r。|n|cffff99cc魔法值低于600时无效。|r|n|cffffff00效果2：|r当祭品死亡时，会爆炸造成600范围的|cffff9900（力量X1.8+敏捷+智力X1.2）X（等级的平方根）X10%|r的伤害。|n|cffffff00效果3（主动效果）：|r在后面60秒内，产生的祭品数量将会暂时性的x3，冷却180s。|n|cff3366ff祭品上限+6|r"
+Ubertip = "|cffff6800黑阎|r吞噬着大量祭品之魂，其魂也附于其中。遇敌之后，刹那瞬间，万千圣魂会侵蚀敌人，让其也化为这祭品中的一份。|n|n|cffffff00效果1：|r当自身受到必死伤害时，若自己存在有祭品，会杀死该祭品来免疫这次伤害，并|cffffff00无敌0.1s,回复5%生命|r。|n|cffff99cc魔法值低于600时无效。|r|n|cffffff00效果2：|r当祭品死亡时，会对600范围的随机一个敌人造成|cffff9900（力量X1.8+敏捷+智力X1.2）X（等级的平方根）X30%|r的伤害。|n|cffffff00效果3（主动效果）：|r在后面60秒内，产生的祭品数量将会暂时性的x3，冷却180s。|n|cff3366ff祭品上限+6|r"
 -- 种族
 race = "human"
 -- 等级要求
@@ -27007,7 +26988,7 @@ Requires = ""
 -- 提示工具 - 普通
 Tip = "|cffffff00祭品特征|r"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "祭品|cffff6800攻击玩家与其友军时,为其恢复1%的生命值.|n|r|n祭品|cff3366ff攻击魔界势力时,对其造成英雄的（力量X1.8+敏捷+智力X1.2）X（等级的平方根）%1伤害.|r"
+Ubertip = "祭品|cffff6800攻击玩家与其友军时,为其恢复2%的生命值.|n|r|n祭品|cff3366ff攻击魔界势力时,对其造成英雄的（力量X1.8+敏捷+智力X1.2）X（等级的平方根）%1|r|cffffff00魔法伤害.|r|cff3366ff|n高级祭品能造成4倍伤害.|r"
 
 [A0L1]
 _parent = "Aroc"
@@ -27020,7 +27001,7 @@ DataA = 0.0000
 -- 最大输出伤害
 DataB = 0.0000
 -- 最大目标数
-DataC = 0
+DataC = 3
 -- 持续时间 - 普通
 Dur = 0.0000
 -- 持续时间 - 英雄
@@ -28546,3 +28527,24 @@ Name = "分身"
 hero = 0
 -- 等级
 levels = 20
+
+[AQ00]
+_parent = "Apxf"
+-- 魔法施放时间间隔
+Cool = 1.0000
+-- 初始伤害
+DataA = 1.0000
+-- 每秒伤害
+DataB = 1.0000
+-- 持续时间 - 普通
+Dur = 0.0100
+-- 持续时间 - 英雄
+HeroDur = 0.0100
+-- 效果 - 投射物图像
+Missileart = "Abilities\\Spells\\Undead\\DeathCoil\\DeathCoilMissile.mdl"
+-- 效果 - 射弹速度
+Missilespeed = 1500
+-- 名字
+Name = "凤凰火焰(泣罗刹爆炸)"
+-- 提示工具 - 普通
+Tip = "凤凰火焰(泣罗刹爆炸)"
