--- a/file/war3map.w3u.ini
+++ b/file/war3map.w3u.ini
@@ -15435,6 +15435,8 @@ file = "units\\undead\\Skeleton\\Skeleton"
 fused = 0
 -- 视野范围(夜晚)
 nsight = 100
+-- 单位附加值
+points = 0
 -- 攻击 1 - 伤害骰子面数
 sides1 = 1
 -- 视野范围(白天)
@@ -15809,8 +15811,6 @@ collision = 0.0000
 file = ".mdl"
 -- 占用人口
 fused = 0
--- 模型缩放
-modelScale = 1.2000
 -- 视野范围(夜晚)
 nsight = 100
 -- 单位附加值
