add the new ability.

--- a/file/war3map.w3a.ini
+++ b/file/war3map.w3a.ini
@@ -18683,6 +18683,32 @@ Tip = "飞蛇之体"
 -- 提示工具 - 普通 - 扩展
 Ubertip = "当受到低于1亿,高于10万伤害时.能反弹伤害的千分之一（延迟1秒）."
 
+[A0P0]
+_parent = "Aimp"
+-- 图标 - 普通
+Art = "ReplaceableTextures\\CommandButtons\\BTNWindSerpent.blp"
+-- 名字
+Name = "战栗"
+-- 需求
+Requires = ""
+-- 提示工具 - 普通
+Tip = "战栗"
+-- 提示工具 - 普通 - 扩展
+Ubertip = "当该单位受到攻击或者发动攻击时，如果对方的等级同时满足以下2个条件，则你会受到额外的伤害，等级之差越高，你受到的伤害越高：|n|n1.对方的等级大于等于50级|n2.对方的等级不比你等级低。|n|n受到的伤害为((对方的等级-你的等级+1)*2)%的生命上限混乱型伤害。 "
+
+[A0P1]
+_parent = "Aimp"
+-- 图标 - 普通
+Art = "ReplaceableTextures\\CommandButtons\\BTNWindSerpent.blp"
+-- 名字
+Name = "君临天下"
+-- 需求
+Requires = ""
+-- 提示工具 - 普通
+Tip = "君临天下"
+-- 提示工具 - 普通 - 扩展
+Ubertip = "当你攻击非英雄单位时，有一定几率直接将其控制，控制几率与难度有关，无法控制魔法免疫单位。"
+
 [A0AD]
 _parent = "ANsi"
 -- 影响区域
@@ -20825,7 +20851,7 @@ levels = 1
 -- 种族
 race = "human"
 -- 等级要求
-reqLevel = 2
+reqLevel = 10
 
 [A0C9]
 _parent = "AOsh"
