--- a/file/war3map.w3u.ini
+++ b/file/war3map.w3u.ini
@@ -2605,6 +2605,8 @@ upgrades = "R004,R003,R000,R00C"
 _parent = "earc"
 -- 生命最大值
 HP = 270000
+-- 等级
+level = 30
 -- 名字
 Name = "Lv8 给硬人加血"
 -- 普通
@@ -2648,6 +2650,8 @@ upgrades = "R004,R003,R000,R001"
 _parent = "ebal"
 -- 攻击 1 - 全伤害范围
 Farea1 = 0
+-- 等级
+level = 150
 -- 生命最大值
 HP = 80000000
 -- 攻击 1 - 中伤害范围
@@ -2766,7 +2770,7 @@ dmgplus1 = 800000000
 -- 占用人口
 fused = 0
 -- 等级
-level = 200
+level = 250
 -- 魔法初始数量
 mana0 = 10000
 -- 魔法最大值
@@ -2774,7 +2778,7 @@ manaN = 10000
 -- 视野范围(夜晚)
 nsight = 9000
 -- 生命回复
-regenHP = 0.0000
+regenHP = 20000000.0000
 -- 魔法回复
 regenMana = 100.0000
 -- 生命回复类型
@@ -2800,6 +2804,8 @@ DependencyOr = ""
 EditorSuffix = ""
 -- 生命最大值
 HP = 25000000
+-- 等级
+level = 120
 -- 名字
 Name = "Lv20 重生"
 -- 需求
@@ -2855,6 +2861,8 @@ DependencyOr = ""
 EditorSuffix = ""
 -- 生命最大值
 HP = 30000000
+-- 等级
+level = 110
 -- 攻击 1 - 投射物图像
 "Missileart:1" = ".mdl"
 -- 名字
@@ -2904,6 +2912,8 @@ upgrades = "R004,R003,R000,R001"
 _parent = "edry"
 -- 生命最大值
 HP = 30000000
+-- 等级
+level = 110
 -- 攻击 1 - 投射物图像
 "Missileart:1" = ".mdl"
 -- 名字
@@ -2953,6 +2963,8 @@ upgrades = "R004,R003,R000,R001"
 _parent = "efdr"
 -- 生命最大值
 HP = 20000000
+-- 等级
+level = 120
 -- 攻击 1 - 投射物图像
 "Missileart:1" = ".mdl"
 -- 名字
@@ -3069,6 +3081,8 @@ upgrades = ""
 _parent = "emtg"
 -- 生命最大值
 HP = 80000000
+-- 等级
+level = 150
 -- 名字
 Name = "Lv24 嘲讽"
 -- 需求
@@ -3158,6 +3172,8 @@ fused = 0
 manaN = 200
 -- 单位附加值
 points = 80
+-- 等级
+level = 30
 -- 攻击 1 - 攻击范围
 rangeN1 = 300
 -- 生命回复
@@ -3341,6 +3357,8 @@ points = 2500
 _parent = "hdhw"
 -- 生命最大值
 HP = 20000000
+-- 等级
+level = 90
 -- 攻击 1 - 投射物图像
 "Missileart:1" = ".mdl"
 -- 名字
@@ -3453,6 +3471,8 @@ upgrades = "R004,R003,R000,R001"
 _parent = "hgry"
 -- 生命最大值
 HP = 5000000
+-- 等级
+level = 90
 -- 攻击 1 - 投射物图像
 "Missileart:1" = ".mdl"
 -- 名字
@@ -3565,6 +3585,8 @@ upgrades = ""
 _parent = "hgyr"
 -- 生命最大值
 HP = 20000000
+-- 等级
+level = 120
 -- 攻击 1 - 投射物图像
 "Missileart:1" = ".mdl"
 -- 名字
@@ -3632,6 +3654,8 @@ upgrades = "R004,R003,R000,R001"
 _parent = "hhes"
 -- 生命最大值
 HP = 1000000
+-- 等级
+level = 50
 -- 名字
 Name = "Lv12 强攻速低"
 -- 普通
@@ -3677,6 +3701,8 @@ upgrades = "R004,R003,R000,R001"
 _parent = "hkni"
 -- 生命最大值
 HP = 160000
+-- 等级
+level = 40
 -- 名字
 Name = "Lv10 自爆骑兵"
 -- 需求
@@ -3773,6 +3799,8 @@ upgrades = "R004,R003,R000,R001"
 _parent = "hmtm"
 -- 生命最大值
 HP = 20000000
+-- 等级
+level = 120
 -- 攻击 1 - 中伤害参数
 Hfact1 = 3.0000
 -- 攻击 1 - 投射物图像
@@ -3865,6 +3893,8 @@ _parent = "hphx"
 Farea1 = 100
 -- 生命最大值
 HP = 25000000
+-- 生命回复
+regenHP = 250000.0000
 -- 攻击 1 - 中伤害范围
 Harea1 = 600
 -- 攻击 1 - 小伤害范围
@@ -3925,6 +3955,8 @@ points = 0
 _parent = "hrif"
 -- 生命最大值
 HP = 360000
+-- 等级
+level = 40
 -- 名字
 Name = "Lv10 专打基地"
 -- 需求
@@ -4859,6 +4891,8 @@ upgrades = "R004,R003,R000,R001"
 _parent = "nchr"
 -- 生命最大值
 HP = 4000000
+-- 等级
+level = 60
 -- 名字
 Name = "Lv13 物理免疫"
 -- 普通
@@ -4900,6 +4934,8 @@ upgrades = "R004,R003,R000,R001"
 _parent = "nchw"
 -- 生命最大值
 HP = 2000000
+-- 等级
+level = 60
 -- 攻击 1 - 投射物图像
 "Missileart:1" = ""
 -- 名字
@@ -5363,6 +5399,8 @@ weapsOn = 0
 _parent = "nenc"
 -- 生命最大值
 HP = 200000000
+-- 生命回复
+regenHP = 2000000.0000
 -- 名字
 Name = "20个1000金币"
 -- 普通
@@ -5388,7 +5426,7 @@ dmgplus1 = 1000000000
 -- 占用人口
 fused = 0
 -- 等级
-level = 200
+level = 300
 -- 魔法初始数量
 mana0 = 4000
 -- 魔法最大值
@@ -5508,6 +5546,8 @@ upgrades = "R00P,R00O,R00M"
 _parent = "nfgb"
 -- 生命最大值
 HP = 40000000
+-- 等级
+level = 160
 -- 名字
 Name = "|cff99cc00血恶魔|r(sp.1)"
 -- 普通
@@ -6079,6 +6119,8 @@ upgrades = ""
 _parent = "nhfp"
 -- 生命最大值
 HP = 150000000
+-- 生命回复
+regenHP = 1500000.0000
 -- 名字
 Name = "10个1000金币"
 -- 普通
@@ -6106,7 +6148,7 @@ dmgplus1 = 500000000
 -- 占用人口
 fused = 0
 -- 等级
-level = 175
+level = 250
 -- 魔法初始数量
 mana0 = 3000
 -- 魔法最大值
@@ -6124,6 +6166,8 @@ upgrades = "R004,R003,R000,R001"
 _parent = "nhhr"
 -- 生命最大值
 HP = 100000000
+-- 生命回复
+regenHP = 1000000.0000
 -- 名字
 Name = "1000金币一只哦亲"
 -- 普通
@@ -6149,7 +6193,7 @@ dmgUp1 = 2000000
 -- 攻击 1 - 基础伤害
 dmgplus1 = 50000000
 -- 等级
-level = 100
+level = 150
 -- 魔法最大值
 manaN = 600
 -- 生命回复
@@ -6493,6 +6537,8 @@ bountysides = 0
 def = 3.0000
 -- 防御升级奖励
 defUp = 3.0000
+-- 等级
+level = 1
 -- 攻击 1 - 伤害升级奖励
 dmgUp1 = 20
 -- 攻击 1 - 基础伤害
@@ -6587,6 +6633,8 @@ dmgUp1 = 10
 dmgplus1 = 30
 -- 占用人口
 fused = 0
+-- 等级
+level = 1
 -- 魔法初始数量
 mana0 = 100
 -- 魔法最大值
@@ -6612,6 +6660,8 @@ upgrades = "R004,R003,R000,R001"
 _parent = "njks"
 -- 生命最大值
 HP = 700000
+-- 等级
+level = 50
 -- 名字
 Name = "Lv12 嗜血术"
 -- 普通
@@ -6684,13 +6734,13 @@ dmgplus1 = 20000000
 -- 占用人口
 fused = 0
 -- 等级
-level = 70
+level = 100
 -- 魔法最大值
 manaN = 500
 -- 单位附加值
 points = 50
 -- 生命回复
-regenHP = 0.0000
+regenHP = 50000.0000
 -- 魔法回复
 regenMana = 3.0000
 -- 使用科技
@@ -6714,6 +6764,8 @@ bountyplus = 1
 bountysides = 0
 -- 攻击 1 - 攻击间隔
 cool1 = 1.0000
+-- 等级
+level = 200
 -- 基础护甲
 def = 1500.0000
 -- 防御升级奖励
@@ -6722,6 +6774,8 @@ defUp = 150.0000
 dmgUp1 = 4000000
 -- 攻击 1 - 基础伤害
 dmgplus1 = 80000000
+-- 生命回复
+regenHP = 100000.0000
 -- 占用人口
 fused = 0
 -- 魔法初始数量
@@ -6772,7 +6826,7 @@ dmgplus1 = 50000000
 -- 占用人口
 fused = 0
 -- 等级
-level = 110
+level = 180
 -- 魔法初始数量
 mana0 = 600
 -- 魔法最大值
@@ -6785,6 +6839,8 @@ rangeN1 = 500
 regenHP = 0.0000
 -- 魔法回复
 regenMana = 6.0000
+-- 生命回复
+regenHP = 75000.0000
 -- 基础速度
 spd = 522
 -- 攻击 1 - 目标允许
@@ -9842,7 +9898,7 @@ dmgplus1 = 300000000
 -- 占用人口
 fused = 0
 -- 等级
-level = 150
+level = 180
 -- 魔法初始数量
 mana0 = 4000
 -- 魔法最大值
@@ -9854,7 +9910,7 @@ nsight = 9000
 -- 攻击 1 - 攻击范围
 rangeN1 = 600
 -- 生命回复
-regenHP = 0.0000
+regenHP = 7000000.0000
 -- 魔法回复
 regenMana = 40.0000
 -- 攻击 1 - 伤害骰子面数
@@ -10098,6 +10154,8 @@ _parent = "nzom"
 HP = 9000000
 -- 名字
 Name = "Lv15 归一之毒（忠诚单位）"
+-- 等级
+level = 80
 -- 普通
 abilList = "A095"
 -- 主动攻击范围
@@ -10139,6 +10197,8 @@ upgrades = "R004,R003,R000,R001"
 _parent = "odoc"
 -- 生命最大值
 HP = 500000
+-- 等级
+level = 45
 -- 攻击 1 - 投射物图像
 "Missileart:1" = ".mdl"
 -- 名字
@@ -10184,6 +10244,8 @@ upgrades = "R004,R003,R000,R001"
 _parent = "ogru"
 -- 生命最大值
 HP = 300000
+-- 等级
+level = 35
 -- 名字
 Name = "Lv9 回魔的"
 -- 普通
@@ -10233,6 +10295,8 @@ _parent = "ohun"
 DependencyOr = ""
 -- 生命最大值
 HP = 500000
+-- 等级
+level = 45
 -- 攻击 1 - 投射物图像
 "Missileart:1" = ".mdl"
 -- 名字
@@ -10287,6 +10351,8 @@ points = 1
 _parent = "okod"
 -- 生命最大值
 HP = 5000000
+-- 等级
+level = 70
 -- 攻击 1 - 投射物图像
 "Missileart:1" = ".mdl"
 -- 名字
@@ -10348,6 +10414,8 @@ upgrades = "R004,R003,R000,R001"
 _parent = "orai"
 -- 生命最大值
 HP = 300000
+-- 等级
+level = 35
 -- 名字
 Name = "Lv9 灵魂爆震但不回魔"
 -- 普通
@@ -10387,6 +10455,8 @@ upgrades = "R004,R003,R000,R001"
 _parent = "oshm"
 -- 生命最大值
 HP = 5000000
+-- 等级
+level = 70
 -- 攻击 1 - 投射物图像
 "Missileart:1" = "Abilities\\Weapons\\NecromancerMissile\\NecromancerMissile.mdl"
 -- 攻击 1 - 射弹速率
@@ -10465,6 +10535,8 @@ _parent = "ospw"
 DependencyOr = ""
 -- 生命最大值
 HP = 20000000
+-- 等级
+level = 100
 -- 攻击 1 - 投射物图像
 "Missileart:1" = "Abilities\\Weapons\\NecromancerMissile\\NecromancerMissile.mdl"
 -- 攻击 1 - 射弹速率
@@ -10508,6 +10580,8 @@ upgrades = "R004,R003,R000,R001"
 _parent = "oswy"
 -- 生命最大值
 HP = 45000000
+-- 等级
+level = 140
 -- 攻击 1 - 射弹自导允许
 "MissileHoming:1" = 1
 -- 攻击 1 - 投射物图像
@@ -10597,6 +10671,8 @@ weapsOn = 1
 _parent = "otau"
 -- 生命最大值
 HP = 20000000
+-- 等级
+level = 100
 -- 名字
 Name = "Lv17 粉碎"
 -- 需求
@@ -10646,6 +10722,8 @@ _parent = "otbr"
 Farea1 = 150
 -- 生命最大值
 HP = 35000000
+-- 等级
+level = 140
 -- 攻击 1 - 中伤害范围
 Harea1 = 450
 -- 攻击 1 - 中伤害参数
@@ -10729,6 +10807,8 @@ weapTp1 = "msplash"
 _parent = "owar"
 -- 生命最大值
 HP = 45000000
+-- 等级
+level = 140
 -- 名字
 Name = "Lv23 波动攻击"
 -- 普通
@@ -10778,6 +10858,8 @@ upgrades = "R004,R003,R000,R001"
 _parent = "owyv"
 -- 生命最大值
 HP = 35000000
+-- 等级
+level = 140
 -- 攻击 1 - 投射物图像
 "Missileart:1" = ".mdl"
 -- 名字
@@ -11068,6 +11150,8 @@ _parent = "umtw"
 Farea1 = 150
 -- 生命最大值
 HP = 30000000
+-- 等级
+level = 130
 -- 攻击 1 - 中伤害范围
 Harea1 = 300
 -- 攻击 1 - 中伤害参数
@@ -11199,6 +11283,8 @@ _parent = "uobs"
 DependencyOr = ""
 -- 生命最大值
 HP = 30000000
+-- 等级
+level = 130
 -- 攻击 1 - 投射物图像
 "Missileart:1" = ".mdl"
 -- 名字
@@ -11260,6 +11346,8 @@ _parent = "uswb"
 EditorSuffix = ""
 -- 生命最大值
 HP = 9000000
+-- 等级
+level = 80
 -- 攻击 1 - 投射物图像
 "Missileart:1" = ".mdl"
 -- 名字
