--- a/file/war3map.w3a.ini
+++ b/file/war3map.w3a.ini
@@ -5627,16 +5627,18 @@ _parent = "AOre"
 "Buttonpos:1" = 1
 -- 按钮位置 - 普通 (Y)
 "Buttonpos:2" = 1
+-- 魔法施放时间
+Cast = 4.0000
 -- 魔法施放时间间隔
 Cool = 0.0000
 -- 重生延迟
-DataA = 3.0000
+DataA = 4.0000
 -- 名字
 Name = "|cffffff00战魂之体|r"
 -- 提示工具 - 普通
 Tip = "|cffffff00战魂之体|r"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "|cffff0000凯撒|r拥有战魂的力量，至今无人能敌，只因他有不亡之躯。|n|cffffff00死亡后等待3s立即原地复活，无冷却时间，死亡时立即爆炸对周围600范围敌人|r|cffff9900（力量X1.8+敏捷+智力X1.2）X（等级的平方根）X66%点魔法伤害，|r|cffffff00复活后眩晕周围1800范围单位3s。|n复活后回复|r|cff99ccff（等级的平方根x100）/ 2|r|cffffff00点魔法。|r"
+Ubertip = "|cffff0000凯撒|r拥有战魂的力量，至今无人能敌，只因他有不亡之躯。|n|cffffff00死亡后等待4s立即原地复活，无冷却时间，死亡时立即爆炸对周围600范围敌人|r|cffff9900（力量X1.8+敏捷+智力X1.2）X（等级的平方根）X66%点魔法伤害，|r|cffffff00眩晕周围1800范围单位3s。|n复活后回复|r|cff99ccff（等级的平方根x100）/ 2|r|cffffff00点魔法。|r"
 -- 英雄技能
 hero = 0
 
@@ -7237,7 +7239,9 @@ TargetArt = "Abilities\\Spells\\Human\\HolyBolt\\HolyBoltSpecialArt.mdl"
 -- 提示工具 - 普通
 Tip = "光疗(|cffffcc00E|r)"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "医疗一个非机械友军单位至满血，冷却3秒。"
+Ubertip = "医疗一个英雄至满血，冷却3秒。"
+-- 目标允许
+targs = "ground,nonancient,vulnerable,air,invulnerable,hero,friend,organic,neutral,self"
 
 [Anhe]
 _parent = "Anhe"
@@ -12177,9 +12181,9 @@ Art = "ReplaceableTextures\\CommandButtons\\BTNPossession.blp"
 -- 按钮位置 - 普通 (Y)
 "Buttonpos:2" = 1
 -- 魔法施放时间间隔
-Cool = 60.0000
+Cool = 3.0000
 -- 魔法消耗
-Cost = 200
+Cost = 700
 -- 伤害
 DataA = 0.0000
 -- 持续时间 - 普通
@@ -12197,7 +12201,7 @@ Rng = 900.0000
 -- 提示工具 - 普通
 Tip = "|cffff0000灵魂侵入|r(|cffffcc00D|r)"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "|cffff0000元素使者|r|cff33ff33玄雪|r拥有强大的灵魂能力（|cff98b4d0无视魔法抵挡|r），能立即进入目标|cffffff00（非英雄、忠诚单位）|r的身体对目标进行控制，整个地图最多存在1个你侵入的生物，目标增加|cff87cefa（英雄ＨＰx1.5）|r点ＨＰ，|cff4169e1（英雄攻击+（力量+敏捷+智力）Ｘ１.0）|r点攻击，|cff4169e1（英雄防御+敏捷/100）|r点防御,|cff4169e110000%|r的攻击速度，并且获得|cffffff00自杀|r技能。|cff7fff00|n|r|cffd2691e无限持续时间，冷却30s。|n|r|n|cffadff2f魔法下限+100.|r"
+Ubertip = "|cffff0000元素使者|r|cff33ff33玄雪|r拥有强大的灵魂能力（|cff98b4d0无视魔法抵挡|r），能立即进入目标|cffffff00（非英雄、忠诚单位）|r的身体对目标进行控制，整个地图最多存在1个你侵入的生物，目标增加|cff87cefa（英雄ＨＰx1.5）|r点ＨＰ，|cff4169e1（英雄攻击+（力量+敏捷+智力）Ｘ１.0）|r点攻击，|cff4169e1（英雄防御+敏捷/100）|r点防御,|cff4169e110000%|r的攻击速度，并且获得|cffffff00自杀|r技能。|cff7fff00|n|r|cffd2691e无限持续时间，冷却3s。|n|r|n|cffadff2f魔法下限+100.|r"
 -- 英雄技能
 hero = 0
 -- 等级
@@ -18335,6 +18339,8 @@ Name = "100倍伤害"
 Tip = "致命一击1级"
 -- 提示工具 - 普通 - 扩展
 Ubertip = "100倍攻击."
+-- 目标允许
+targs = ""
 
 [A09W]
 _parent = "Aimp"
@@ -18682,32 +18688,6 @@ Requires = ""
 Tip = "飞蛇之体"
 -- 提示工具 - 普通 - 扩展
 Ubertip = "当受到低于1亿,高于10万伤害时.能反弹伤害的千分之一（延迟1秒）."
-
-[A0P0]
-_parent = "Aimp"
--- 图标 - 普通
-Art = "ReplaceableTextures\\CommandButtons\\BTNWindSerpent.blp"
--- 名字
-Name = "战栗"
--- 需求
-Requires = ""
--- 提示工具 - 普通
-Tip = "战栗"
--- 提示工具 - 普通 - 扩展
-Ubertip = "当该单位受到攻击或者发动攻击时，如果对方的等级同时满足以下2个条件，则你会受到额外的伤害，等级之差越高，你受到的伤害越高：|n|n1.对方的等级大于等于50级|n2.对方的等级不比你等级低。|n|n受到的伤害为((对方的等级-你的等级+1)*2)%的生命上限混乱型伤害。 "
-
-[A0P1]
-_parent = "Aimp"
--- 图标 - 普通
-Art = "ReplaceableTextures\\CommandButtons\\BTNWindSerpent.blp"
--- 名字
-Name = "君临天下"
--- 需求
-Requires = ""
--- 提示工具 - 普通
-Tip = "君临天下"
--- 提示工具 - 普通 - 扩展
-Ubertip = "当你攻击非英雄单位时，有一定几率直接将其控制，控制几率与难度有关，无法控制魔法免疫单位。"
 
 [A0AD]
 _parent = "ANsi"
@@ -19610,7 +19590,9 @@ TargetArt = "Abilities\\Spells\\Human\\HolyBolt\\HolyBoltSpecialArt.mdl"
 -- 提示工具 - 普通
 Tip = "光疗(|cffffcc00E|r)"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "医疗一个非机械友军单位至满血，冷却1.5秒。"
+Ubertip = "医疗一个英雄至满血，冷却1.5秒。"
+-- 目标允许
+targs = "ground,nonancient,vulnerable,air,invulnerable,hero,friend,organic,neutral,self"
 
 [A0AO]
 _parent = "Apxf"
@@ -21496,7 +21478,9 @@ TargetArt = "Abilities\\Spells\\Human\\HolyBolt\\HolyBoltSpecialArt.mdl"
 -- 提示工具 - 普通
 Tip = "光疗(|cffffcc00E|r)"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "医疗一个非机械友军单位至满血，冷却0.25秒。"
+Ubertip = "医疗一个英雄至满血，冷却0.25秒。"
+-- 目标允许
+targs = "ground,nonancient,vulnerable,air,invulnerable,hero,friend,organic,neutral,self"
 
 [A0D6]
 _parent = "AIcs"
@@ -27076,6 +27060,32 @@ Ubertip = "对600范围所有敌人同时进行攻击。"
 -- 目标允许
 targs = "air,ground,debris,enemy,neutral,organic"
 
+[A0P0]
+_parent = "Aimp"
+-- 图标 - 普通
+Art = "ReplaceableTextures\\CommandButtons\\BTNWindSerpent.blp"
+-- 名字
+Name = "战栗"
+-- 需求
+Requires = ""
+-- 提示工具 - 普通
+Tip = "战栗"
+-- 提示工具 - 普通 - 扩展
+Ubertip = "当该单位受到攻击或者发动攻击时，如果对方的等级同时满足以下2个条件，则你会受到额外的伤害，等级之差越高，你受到的伤害越高：|n|n1.对方的等级大于等于50级|n2.对方的等级不比你等级低。|n|n受到的伤害为((对方的等级-你的等级+1)*2)%的生命上限混乱型伤害。 "
+
+[A0P1]
+_parent = "Aimp"
+-- 图标 - 普通
+Art = "ReplaceableTextures\\CommandButtons\\BTNWindSerpent.blp"
+-- 名字
+Name = "君临天下"
+-- 需求
+Requires = ""
+-- 提示工具 - 普通
+Tip = "君临天下"
+-- 提示工具 - 普通 - 扩展
+Ubertip = "当你攻击非英雄单位时，有一定几率直接将其控制，控制几率与难度有关，无法控制魔法免疫单位。"
+
 [AB00]
 _parent = "Amls"
 -- 魔法施放时间间隔
@@ -27617,10 +27627,8 @@ _parent = "Absk"
 Art = "ReplaceableTextures\\CommandButtons\\BTNDeathAndDecay.blp"
 -- 按钮位置 - 普通 (X)
 "Buttonpos:1" = 2
--- 魔法施放时间间隔
-Cool = 10.0000
 -- 魔法消耗
-Cost = 1000
+Cost = 3000
 -- 移动速度增加
 DataA = 0.0000
 -- 攻击速度增加
@@ -27638,7 +27646,7 @@ Name = "魔临天下"
 -- 提示工具 - 普通
 Tip = "|cffff0000魔临天下|r(|cffffcc00E|r)"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "在接下来的3秒内,该魔兽的攻击速度增加10000%,冷却10s."
+Ubertip = "在接下来的3秒内,该魔兽的攻击速度增加10000%,冷却30s."
 
 [AL01]
 _parent = "ANrf"
