--- a/file/war3map.w3t.ini
+++ b/file/war3map.w3t.ini
@@ -6524,13 +6524,13 @@ _parent = "tkno"
 -- 按钮位置(X)
 "Buttonpos:1" = 3
 -- 说明
-Description = "能提高英雄1个等级，收费如下：|n|cffffcc00当前等级x1|r木头|n"
+Description = "能提高英雄1个等级，收费如下：|n|cffffcc00当前等级x1|r木头|n|n|cff008000注意:英雄最高等级为450级!|r"
 -- 热键
 Hotkey = ""
 -- 提示工具 - 基础
 Tip = "购买能量之书"
 -- 提示工具 - 扩展
-Ubertip = "能提高英雄1个等级，收费如下：|n|cffffcc00当前等级x1|r木头|n"
+Ubertip = "能提高英雄1个等级，收费如下：|n|cffffcc00当前等级x1|r木头|n|n|cff008000注意:英雄最高等级为450级!|r"
 -- 技能
 abilList = ""
 -- 物品分类
