edit a lot of file.

--- a/file/war3map.w3a.ini
+++ b/file/war3map.w3a.ini
@@ -2867,7 +2867,7 @@ targs = {
 [ACsl]
 _parent = "ACsl"
 -- 魔法施放时间间隔
-Cool = 20.0000
+Cool = 3.0000
 
 [ACsm]
 _parent = "ACsm"
@@ -4807,7 +4807,7 @@ levels = 1
 [ANdo]
 _parent = "ANdo"
 -- 魔法施放时间间隔
-Cool = {30.0000, 30.0000, 30.0000, 30.0000, 30.0000, 30.0000, 30.0000}
+Cool = {3.0000, 3.0000, 3.0000, 3.0000, 3.0000, 3.0000, 3.0000}
 -- 每秒伤害
 DataA = {1500000.0000, 1750000.0000, 2000000.0000, 2250000.0000, 2500000.0000, 2750000.0000, 3000000.0000}
 -- 召唤单位数量
@@ -5552,7 +5552,7 @@ Cost = 1
 -- 持续时间 - 普通
 Dur = 3.0000
 -- 持续时间 - 英雄
-HeroDur = 3.0000
+HeroDur = 1.0000
 -- 热键 - 普通
 Hotkey = "W"
 -- 名字
@@ -5566,13 +5566,13 @@ Researchhotkey = "W"
 -- 提示工具 - 学习
 Researchtip = "学习|cffff00ff炼血一击|r(|cffffcc00W|r)"
 -- 提示工具 - 学习 - 扩展
-Researchubertip = "|cffff0000凯撒|r那强大的血统让敌人胆颤，并能以自身精血为力量，对敌人造成杀伤力。|n|n|cffffff00主动效果：|r立即令自身HP和MP变成1，对目标造成|cffffff00（之前剩余HPx等级的平方根）x（之前剩余的MP/500）点混乱型伤害|r并把其变成一只小动物3s。|n|n|cffffff00被动效果：|r每攻击满|cffffff0040次|r在自身周围释放一次具有|cffffff0033%伤害|r的|cff99ccff憾裂天地|r。|n|cffff6699魔法值低于250时不会释放。|r"
+Researchubertip = "|cffff0000凯撒|r那强大的血统让敌人胆颤，并能以自身精血为力量，对敌人造成杀伤力。|n|n|cffffff00主动效果：|r立即令自身HP和MP变成1，对目标造成|cffffff00（之前剩余HPx等级的平方根）x（之前剩余的MP/500）点混乱型伤害|r并把其变成一只小动物3s(英雄1s)。|n|cffff6800上限21亿伤害,达到后不会再增加.|r|n|n|cffffff00被动效果：|r每攻击满|cffffff0020次|r在自身周围释放一次具有|cffffff0033%伤害|r的|cff99ccff憾裂天地|r。|n|cffff6699魔法值低于250时不会释放。|r"
 -- 施法距离
 Rng = 1800.0000
 -- 提示工具 - 普通
 Tip = "|cffff00ff炼血一击|r(|cffffcc00W|r)"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "|cffff0000凯撒|r那强大的血统让敌人胆颤，并能以自身精血为力量，对敌人造成杀伤力。|n|n|cffffff00主动效果：|r立即令自身HP和MP变成1，对目标造成|cffffff00（之前剩余HPx等级的平方根）x（之前剩余的MP/500）点混乱型伤害|r并把其变成一只小动物3s。|n|n|cffffff00被动效果：|r每攻击满|cffffff0040次|r在自身周围释放一次具有|cffffff0033%伤害|r的|cff99ccff憾裂天地|r。|n|cffff6699魔法值低于250时不会释放。|r"
+Ubertip = "|cffff0000凯撒|r那强大的血统让敌人胆颤，并能以自身精血为力量，对敌人造成杀伤力。|n|n|cffffff00主动效果：|r立即令自身HP和MP变成1，对目标造成|cffffff00（之前剩余HPx等级的平方根）x（之前剩余的MP/500）点混乱型伤害|r并把其变成一只小动物3s(英雄1s)。|n|cffff6800上限21亿伤害,达到后不会再增加.|r|n|n|cffffff00被动效果：|r每攻击满|cffffff0020次|r在自身周围释放一次具有|cffffff0033%伤害|r的|cff99ccff憾裂天地|r。|n|cffff6699魔法值低于250时不会释放。|r"
 -- 等级
 levels = 1
 -- 等级要求
@@ -5628,17 +5628,17 @@ _parent = "AOre"
 -- 按钮位置 - 普通 (Y)
 "Buttonpos:2" = 1
 -- 魔法施放时间
-Cast = 4.0000
+Cast = 4.5000
 -- 魔法施放时间间隔
 Cool = 0.0000
 -- 重生延迟
-DataA = 4.0000
+DataA = 5.0000
 -- 名字
 Name = "|cffffff00战魂之体|r"
 -- 提示工具 - 普通
 Tip = "|cffffff00战魂之体|r"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "|cffff0000凯撒|r拥有战魂的力量，至今无人能敌，只因他有不亡之躯。|n|cffffff00死亡后等待4s立即原地复活，无冷却时间，死亡时立即爆炸对周围600范围敌人|r|cffff9900（力量X1.8+敏捷+智力X1.2）X（等级的平方根）X66%点魔法伤害，|r|cffffff00眩晕周围1800范围单位3s。|n复活后回复|r|cff99ccff（等级的平方根x100）/ 2|r|cffffff00点魔法。|r"
+Ubertip = "|cffff0000凯撒|r拥有战魂的力量，至今无人能敌，只因他有不亡之躯。|n|cffffff00死亡后等待4.5s立即原地复活，无冷却时间，死亡时立即爆炸对周围600范围敌人|r|cffff9900（力量X1.8+敏捷+智力X1.2）X（等级的平方根）X66%点魔法伤害.|r|cffffff00|n复活后回复|r|cff99ccff（等级的平方根x50）|r|cffffff00点魔法。|r"
 -- 英雄技能
 hero = 0
 
@@ -5963,11 +5963,11 @@ Researchhotkey = "W"
 -- 提示工具 - 学习
 Researchtip = "学习|cffffff00空间跳跃|r(|cffffcc00W|r)"
 -- 提示工具 - 学习 - 扩展
-Researchubertip = "|cff00ccff摄焱|r将自己的力量赋予|cffff0000血煞之狼|r，在|cffffff00自己或者血煞之狼|r攻击敌方单位时，有5%的几率祭出一股类似|cffff6800弹射火焰|r的|cff00ccff弹射冰晶|r，具有60%的基础杀伤力，|cff00ccff同时存在的冰晶上限数量为3，冷却4s。|r|n|cffff99cc魔法值低于100不会释放。|r|n弹射|cffff6800火焰|r、|cff00ccff冰晶|r在弹射的时候，若没有了可弹射目标，将会|cffffff00跳跃至摄焱、血煞之狼|r继续弹射。|cff00ccff（顺序：周围＞摄焱＞血煞之狼）|n|n|r|cff99cc00使用该技能可以立即让所有的火焰、冰晶来到|r|cff00ccff摄焱|r|cff99cc00周围。|n|r|cff00ccff狼数量上限+1。|r"
+Researchubertip = "|cff00ccff摄焱|r将自己的力量赋予|cffff0000血煞之狼|r，在|cffffff00自己或者血煞之狼|r攻击敌方单位时，有5%的几率祭出一股类似|cffff6800弹射火焰|r的|cff00ccff弹射冰晶|r，具有30%的基础杀伤力，|cff00ccff同时存在的冰晶上限数量为3，冷却4s。|r|n|cffff99cc魔法值低于100不会释放。|r|n弹射|cffff6800火焰|r、|cff00ccff冰晶|r在弹射的时候，若没有了可弹射目标，将会|cffffff00跳跃至摄焱、血煞之狼|r继续弹射。|cff00ccff（顺序：周围＞摄焱＞血煞之狼）|n|n|r|cff99cc00使用该技能可以立即让所有的火焰、冰晶来到|r|cff00ccff摄焱|r|cff99cc00周围。|n|r|cff00ccff狼数量上限+1。|r"
 -- 提示工具 - 普通
 Tip = "|cffffff00空间跳跃|r(|cffffcc00W|r)"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "|cff00ccff摄焱|r将自己的力量赋予|cffff0000血煞之狼|r，在|cffffff00自己或者血煞之狼|r攻击敌方单位时，有5%的几率祭出一股类似|cffff6800弹射火焰|r的|cff00ccff弹射冰晶|r，具有60%的基础杀伤力，|cff00ccff同时存在的冰晶上限数量为3，冷却4s。|r|n|cffff99cc魔法值低于100不会释放。|r|n弹射|cffff6800火焰|r、|cff00ccff冰晶|r在弹射的时候，若没有了可弹射目标，将会|cffffff00跳跃至摄焱、血煞之狼|r继续弹射。|cff00ccff（顺序：周围＞摄焱＞血煞之狼）|n|n|r|cff99cc00使用该技能可以立即让所有的火焰、冰晶来到|r|cff00ccff摄焱|r|cff99cc00周围。|n|r|cff00ccff狼数量上限+1。|r"
+Ubertip = "|cff00ccff摄焱|r将自己的力量赋予|cffff0000血煞之狼|r，在|cffffff00自己或者血煞之狼|r攻击敌方单位时，有5%的几率祭出一股类似|cffff6800弹射火焰|r的|cff00ccff弹射冰晶|r，具有30%的基础杀伤力，|cff00ccff同时存在的冰晶上限数量为3，冷却4s。|r|n|cffff99cc魔法值低于100不会释放。|r|n弹射|cffff6800火焰|r、|cff00ccff冰晶|r在弹射的时候，若没有了可弹射目标，将会|cffffff00跳跃至摄焱、血煞之狼|r继续弹射。|cff00ccff（顺序：周围＞摄焱＞血煞之狼）|n|n|r|cff99cc00使用该技能可以立即让所有的火焰、冰晶来到|r|cff00ccff摄焱|r|cff99cc00周围。|n|r|cff00ccff狼数量上限+1。|r"
 -- 等级
 levels = 1
 -- 等级要求
@@ -9552,8 +9552,6 @@ Area = 0.0000
 Art = "ReplaceableTextures\\CommandButtons\\BTNBreathOfFrost.blp"
 -- 魔法效果
 BuffID = ""
--- 魔法施放时间间隔
-Cool = 197.5000
 -- 魔法消耗
 Cost = 800
 -- 持续时间 - 普通
@@ -9573,11 +9571,11 @@ Researchhotkey = "R"
 -- 提示工具 - 学习
 Researchtip = "学习|cFF000099幻冰傲世|r(|cffffcc00R|r)"
 -- 提示工具 - 学习 - 扩展
-Researchubertip = "放出冰魂之球围绕自身，冰魂之球具有灵性，能放出阵阵飞冰对敌人造成极大的伤害。每条飞冰造成|cffff9900（力量+敏捷+智力X2）X（等级的平方根）X20%|r点伤害。冷却|cffff9900200s|r.|n|n冰球持续|cffff990020s|r。"
+Researchubertip = "放出冰魂之球围绕自身，冰魂之球具有灵性，能放出阵阵飞冰对敌人造成极大的伤害。每条飞冰造成|cffff9900（力量+敏捷+智力X2）X（等级的平方根）X20%|r点伤害。冷却|cffff9900180s|r.|n|n冰球持续|cffff990020s|r。"
 -- 提示工具 - 普通
 Tip = "|cFF000099幻冰傲世|r(|cffffcc00R|r)"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "放出冰魂之球围绕自身，冰魂之球具有灵性，能放出阵阵飞冰对敌人造成极大的伤害。每条飞冰造成|cffff9900（力量+敏捷+智力X2）X（等级的平方根）X20%|r点伤害。冷却|cffff9900200s|r.|n|n冰球持续|cffff990020s|r。"
+Ubertip = "放出冰魂之球围绕自身，冰魂之球具有灵性，能放出阵阵飞冰对敌人造成极大的伤害。每条飞冰造成|cffff9900（力量+敏捷+智力X2）X（等级的平方根）X20%|r点伤害。冷却|cffff9900180s|r.|n|n冰球持续|cffff990020s|r。"
 -- 种族
 race = "human"
 -- 等级要求
@@ -9671,11 +9669,11 @@ Researchhotkey = "T"
 -- 提示工具 - 学习
 Researchtip = "学习|cFFCC66CC幻封冰棺|r(|cffffcc00T|r)"
 -- 提示工具 - 学习 - 扩展
-Researchubertip = "制造大片冰封区域，其中的冰块不但会对敌人造成伤害，还能冰封住敌人。|cffff9900600范围|r，冰块持续12秒，每次攻击能造成|cffff9900（力量+敏捷+智力X2）X（等级的平方根）X5%点伤害。|r|n|n冷却300s."
+Researchubertip = "制造大片冰封区域，其中的冰块不但会对敌人造成伤害，还能冰封住敌人。|cffff9900600范围|r，冰块持续12秒，每次攻击能造成|cffff9900（力量+敏捷+智力X2）X（等级的平方根）X20%点伤害。|r|n|n冷却300s."
 -- 提示工具 - 普通
 Tip = "|cFFCC66CC幻封冰棺|r(|cffffcc00T|r)"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "制造大片冰封区域，其中的冰块不但会对敌人造成伤害，还能冰封住敌人。|cffff9900600范围|r，冰块持续12秒，每次攻击能造成|cffff9900（力量+敏捷+智力X2）X（等级的平方根）X5%点伤害。|r|n|n冷却300s."
+Ubertip = "制造大片冰封区域，其中的冰块不但会对敌人造成伤害，还能冰封住敌人。|cffff9900600范围|r，冰块持续12秒，每次攻击能造成|cffff9900（力量+敏捷+智力X2）X（等级的平方根）X20%点伤害。|r|n|n冷却300s."
 -- 跳级要求
 levelSkip = 100
 -- 种族
@@ -12552,7 +12550,7 @@ Name = "自杀"
 -- 提示工具 - 普通
 Tip = "自杀(|cffffcc00D|r)"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "无灵魂刻印：自杀。|n|cffff0000有灵魂刻印|r：对周围的单位造成巨大伤害。"
+Ubertip = "自杀."
 
 [A049]
 _parent = "AOww"
@@ -12876,11 +12874,11 @@ Researchhotkey = "E"
 -- 提示工具 - 学习
 Researchtip = "学习|cffff0000玄箭|r(|cffffcc00E|r)"
 -- 提示工具 - 学习 - 扩展
-Researchubertip = "|cff999900莫琪|r体内所爆发的圣力可以联合七星一起展现出来，释放出无尽的恐怖力量。|n|cffccff66效果1：（主动效果）|r在每个存在的七星周围召唤箭灵,箭灵每1s都会对敌人射出1支圣箭,每支箭具有|cffff9900（力量+敏捷X1.8+智力X1.2）X（等级的平方根）X30%|r的伤害,箭灵持续6s.|n|cffccff66效果2：（光环效果）：|r整个地图的队友（包括自己）造成伤害的时候，能汲取其中的|cffffff002%（自己为3%）为自己的生命|r，当自己生命低于25%的时候，能将所有伤害转换为生命。|n"
+Researchubertip = "|cff999900莫琪|r体内所爆发的圣力可以联合七星一起展现出来，释放出无尽的恐怖力量。|n|cffccff66效果1：（主动效果）|r在每个存在的七星周围召唤箭灵,箭灵每1s都会对敌人射出1支圣箭,每支箭具有|cffff9900（力量+敏捷X1.8+智力X1.2）X（等级的平方根）X30%|r的伤害,箭灵持续11s.|n|cffccff66效果2：（光环效果）：|r整个地图的队友（包括自己）造成伤害的时候，能汲取其中的|cffffff002%（自己为3%）为自己的生命|r，当自己生命低于25%的时候，能将所有伤害转换为生命。|n"
 -- 提示工具 - 普通
 Tip = "|cffff0000玄箭|r(|cffffcc00E|r)"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "|cff999900莫琪|r体内所爆发的圣力可以联合七星一起展现出来，释放出无尽的恐怖力量。|n|cffccff66效果1：（主动效果）|r在每个存在的七星周围召唤箭灵,箭灵每1s都会对敌人射出1支圣箭,每支箭具有|cffff9900（力量+敏捷X1.8+智力X1.2）X（等级的平方根）X30%|r的伤害,箭灵持续6s.|n|cffccff66效果2：（光环效果）：|r整个地图的队友（包括自己）造成伤害的时候，能汲取其中的|cffffff002%（自己为3%）为自己的生命|r，当自己生命低于25%的时候，能将所有伤害转换为生命。|n"
+Ubertip = "|cff999900莫琪|r体内所爆发的圣力可以联合七星一起展现出来，释放出无尽的恐怖力量。|n|cffccff66效果1：（主动效果）|r在每个存在的七星周围召唤箭灵,箭灵每1s都会对敌人射出1支圣箭,每支箭具有|cffff9900（力量+敏捷X1.8+智力X1.2）X（等级的平方根）X30%|r的伤害,箭灵持续11s.|n|cffccff66效果2：（光环效果）：|r整个地图的队友（包括自己）造成伤害的时候，能汲取其中的|cffffff002%（自己为3%）为自己的生命|r，当自己生命低于25%的时候，能将所有伤害转换为生命。|n"
 -- 等级
 levels = 1
 -- 种族
@@ -18353,7 +18351,7 @@ Requires = ""
 -- 提示工具 - 普通
 Tip = "老牛克星"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "老牛在你周围死了,你就能回复5%的生命."
+Ubertip = "老牛在你周围死了,你就能回复10%的生命."
 
 [A09X]
 _parent = "ACcl"
@@ -19793,11 +19791,11 @@ Researchhotkey = "R"
 -- 提示工具 - 学习
 Researchtip = "学习|cffff99cc战栗灵魂|r(|cffffcc00R|r)"
 -- 提示工具 - 学习 - 扩展
-Researchubertip = "|cff99ccff“颤抖吧，蝼蚁们”|n|r|n|cffffff00主动效果：|r立即对周围６００范围的敌人造成瞬时|cffff9900（力量X1.8+敏捷+智力X1.2）X（等级的平方根）X２.５点魔法伤害|r，并将他们变成小动物5s|cffffff00（无视魔法阻挡）。|r|n|n|cffffff00被动效果：|r被攻击有5%几率将敌人变成小动物2s(英雄0.5s)|cffffff00（无视魔法阻挡）。|r|n|cffff6699魔法值低于250时不会释放。|r"
+Researchubertip = "|cff99ccff“颤抖吧，蝼蚁们”|n|r|n|cffffff00主动效果：|r立即对周围６００范围的敌人造成瞬时|cffff9900（力量X1.8+敏捷+智力X1.2）X（等级的平方根）X２.５点魔法伤害|r，并将他们变成小动物5s|cffffff00（无视魔法阻挡）。|r|n|n|cffffff00被动效果：|r被攻击有5%几率将敌人变成小动物2s(英雄0.5s)|cffffff00（无视魔法阻挡）。|r|n|cffff6699魔法值低于600时不会释放。|r"
 -- 提示工具 - 普通
 Tip = "|cffff99cc战栗灵魂|r(|cffffcc00R|r)"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "|cff99ccff“颤抖吧，蝼蚁们”|n|r|n|cffffff00主动效果：|r立即对周围６００范围的敌人造成瞬时|cffff9900（力量X1.8+敏捷+智力X1.2）X（等级的平方根）X２.５点魔法伤害|r，并将他们变成小动物5s|cffffff00（无视魔法阻挡）。|r|n|n|cffffff00被动效果：|r被攻击有5%几率将敌人变成小动物2s(英雄0.5s)|cffffff00（无视魔法阻挡）。|r|n|cffff6699魔法值低于250时不会释放。|r"
+Ubertip = "|cff99ccff“颤抖吧，蝼蚁们”|n|r|n|cffffff00主动效果：|r立即对周围６００范围的敌人造成瞬时|cffff9900（力量X1.8+敏捷+智力X1.2）X（等级的平方根）X２.５点魔法伤害|r，并将他们变成小动物5s|cffffff00（无视魔法阻挡）。|r|n|n|cffffff00被动效果：|r被攻击有5%几率将敌人变成小动物2s(英雄0.5s)|cffffff00（无视魔法阻挡）。|r|n|cffff6699魔法值低于600时不会释放。|r"
 -- 种族
 race = "human"
 -- 等级要求
@@ -27063,7 +27061,11 @@ targs = "air,ground,debris,enemy,neutral,organic"
 [A0P0]
 _parent = "Aimp"
 -- 图标 - 普通
-Art = "ReplaceableTextures\\CommandButtons\\BTNWindSerpent.blp"
+Art = "ReplaceableTextures\\CommandButtons\\BTNPolymorph.blp"
+-- 按钮位置 - 普通 (X)
+"Buttonpos:1" = 2
+-- 按钮位置 - 普通 (Y)
+"Buttonpos:2" = 1
 -- 名字
 Name = "战栗"
 -- 需求
@@ -27071,18 +27073,18 @@ Requires = ""
 -- 提示工具 - 普通
 Tip = "战栗"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "当该单位受到攻击或者发动攻击时，如果对方的等级同时满足以下2个条件，则你会受到额外的伤害，等级之差越高，你受到的伤害越高：|n|n1.对方的等级大于等于50级|n2.对方的等级不比你等级低。|n|n受到的伤害为((对方的等级-你的等级+1)*2)%的生命上限混乱型伤害。 "
+Ubertip = "当该单位被攻击时，如果对方的等级同时满足以下2个条件，则你会受到额外的伤害，等级之差越高，你受到的伤害越高：|n|n|cffffff001.对方的等级大于等于50级|n2.对方的等级不比你等级低。|r|n|n|cffff6800受到的伤害为((对方的等级-你的等级+1)*2)%的生命上限混乱型伤害。 |r"
 
 [A0P1]
 _parent = "Aimp"
 -- 图标 - 普通
-Art = "ReplaceableTextures\\CommandButtons\\BTNWindSerpent.blp"
+Art = "ReplaceableTextures\\CommandButtons\\BTNMetamorphosis.blp"
 -- 名字
-Name = "君临天下"
+Name = "臣服于我"
 -- 需求
 Requires = ""
 -- 提示工具 - 普通
-Tip = "君临天下"
+Tip = "臣服于我"
 -- 提示工具 - 普通 - 扩展
 Ubertip = "当你攻击非英雄单位时，有一定几率直接将其控制，控制几率与难度有关，无法控制魔法免疫单位。"
 
