--- a/file/war3map.w3u.ini
+++ b/file/war3map.w3u.ini
@@ -146,7 +146,7 @@ STR = 1000
 -- 英雄 - 每等级提升力量
 STRplus = 1000.0000
 -- 普通
-abilList = "AInv,A043,ACdr,Aegr,A09F"
+abilList = "AInv,A043,ACdr,Aegr,A09F,A0P1,A09W"
 -- 主动攻击范围
 acquire = 1800.0000
 -- 攻击 1 - 攻击类型
@@ -195,7 +195,7 @@ Name = "|cffffff00Crainax|r的分身"
 -- 称谓
 Propernames = "|cFFFF66CC圣主分身|r"
 -- 普通
-abilList = "AInv,A0C3,A0EN,A0EM,A0EO,Adts,A0EP"
+abilList = "AInv,A0C3,A0EN,A0EM,A0EO,Adts,A0EP,A0P1,A09W"
 -- 主动攻击范围
 acquire = 3600.0000
 -- 攻击 1 - 攻击类型
@@ -1511,7 +1511,7 @@ STR = 1000000000
 -- 英雄 - 每等级提升力量
 STRplus = 0.0000
 -- 普通
-abilList = "A0AG,Apig,Adts,A09V"
+abilList = "A0AG,Apig,Adts,A09V,A0P1"
 -- 主动攻击范围
 acquire = 600.0000
 -- 攻击 1 - 攻击类型
@@ -1590,7 +1590,7 @@ STR = 1
 -- 英雄 - 每等级提升力量
 STRplus = 1.0000
 -- 普通
-abilList = "AInv,A0BV,Adts,ANrf,A04E,ANdo,A09V"
+abilList = "AInv,A0BV,Adts,ANrf,A04E,ANdo,A09V,A0P1"
 -- 主动攻击范围
 acquire = 900.0000
 -- 攻击 1 - 攻击类型
@@ -1837,7 +1837,7 @@ STR = 500000000
 -- 英雄 - 每等级提升力量
 STRplus = 0.0000
 -- 普通
-abilList = "A0AG,AHav,A0DZ,Adts,A09V"
+abilList = "A0AG,AHav,A0DZ,Adts,A09V,A0P1"
 -- 颜色值(蓝)
 blue = 0
 -- 黄金奖励 - 基础值
@@ -2275,7 +2275,7 @@ STR = 500000000
 -- 英雄 - 每等级提升力量
 STRplus = 0.0000
 -- 普通
-abilList = "A0AG,AHav,Adts,A0E0,A09V"
+abilList = "A0AG,AHav,Adts,A0E0,A09V,A0P1"
 -- 攻击 1 - 攻击类型
 atkType1 = "chaos"
 -- 颜色值(蓝)
@@ -2450,7 +2450,7 @@ STR = 1
 -- 英雄 - 每等级提升力量
 STRplus = 1.0000
 -- 普通
-abilList = "AInv,A0BV,Adts,AUcs,ACsl,A04E,A09V"
+abilList = "AInv,A0BV,Adts,AUcs,ACsl,A04E,A09V,A0P1"
 -- 主动攻击范围
 acquire = 900.0000
 -- 攻击 1 - 攻击类型
@@ -2547,7 +2547,7 @@ STR = 100000000
 -- 英雄 - 每等级提升力量
 STRplus = 1.0000
 -- 普通
-abilList = "A09V,AInv,A0BV,Adts,A0BW,A04E,A0DC"
+abilList = "A09V,AInv,A0BV,Adts,A0BW,A04E,A0DC,A0P1"
 -- 主动攻击范围
 acquire = 900.0000
 -- 黄金奖励 - 骰子数量
@@ -3928,7 +3928,7 @@ lumberbountyplus = 2
 -- 视野范围(夜晚)
 nsight = 9000
 -- 生命回复
-regenHP = 0.0000
+regenHP = 250000.0000
 -- 攻击 1 - 伤害骰子面数
 sides1 = 100000
 -- 视野范围(白天)
@@ -5051,7 +5051,7 @@ points = 500
 -- 攻击 1 - 攻击范围
 rangeN1 = 500
 -- 生命回复
-regenHP = 0.0000
+regenHP = 60000.0000
 -- 魔法回复
 regenMana = 6.0000
 -- 基础速度
@@ -5432,7 +5432,7 @@ points = 2000
 -- 攻击 1 - 攻击范围
 rangeN1 = 500
 -- 生命回复
-regenHP = 0.0000
+regenHP = 2000000.0000
 -- 魔法回复
 regenMana = 40.0000
 -- 攻击 1 - 目标允许
@@ -6150,7 +6150,7 @@ manaN = 3000
 -- 单位附加值
 points = 1000
 -- 生命回复
-regenHP = 0.0000
+regenHP = 1500000.0000
 -- 魔法回复
 regenMana = 30.0000
 -- 使用科技
@@ -12928,7 +12928,7 @@ STR = 100
 -- 英雄 - 每等级提升力量
 STRplus = 20.0000
 -- 普通
-abilList = "Aien,A0B9,A0FR"
+abilList = "A048,Aien,A0B9,A0FR"
 -- 攻击 1 - 动画回复点
 backSw1 = 0.4000
 -- 攻击 1 - 攻击间隔
@@ -15514,7 +15514,7 @@ fused = 0
 -- 视野范围(夜晚)
 nsight = 100
 -- 单位附加值
-points = 0
+points = 123
 -- 攻击 1 - 伤害骰子面数
 sides1 = 1
 -- 视野范围(白天)
@@ -16884,6 +16884,15 @@ scale = 2.0000
 uberSplat = ""
 -- 单位声音设置
 unitSound = "Peasant"
+
+[n01A]
+_parent = "ncop"
+-- 名字
+Name = "|cffffff00传送点|r"
+-- 模型文件
+file = "Abilities\\Spells\\Human\\MassTeleport\\MassTeleportTo.mdl"
+-- 单位附加值
+points = 0
 
 [u000]
 _parent = "uloc"
