--- a/file/war3map.w3t.ini
+++ b/file/war3map.w3t.ini
@@ -12931,3 +12931,196 @@ stockRegen = 0
 usable = 0
 -- 使用次数
 uses = 0
+
+[IXU1]
+_parent = "infs"
+-- 界面图标
+Art = "ReplaceableTextures\\CommandButtons\\BTNTalisman.blp"
+-- 按钮位置(X)
+"Buttonpos:1" = 2
+-- 按钮位置(Y)
+"Buttonpos:2" = 1
+-- 说明
+Description = "虚界顶级至宝，太虚之极所筑，融合虚界之精华，炼化几千万年所形成的天界宝玉。|n|cffffcc00使用宝石升级装备时，若该物品也在身上，有100%的几率升级成功。|n|r"
+-- 名字
+Name = "[虚]琉璃璞玉"
+-- 提示工具 - 基础
+Tip = "[虚]琉璃璞玉"
+-- 提示工具 - 扩展
+Ubertip = "虚界顶级至宝，太虚之极所筑，融合虚界之精华，炼化几千万年所形成的天界宝玉。|n|cffffcc00使用宝石升级装备时，若该物品也在身上，有100%的几率升级成功。|n|r"
+-- 技能
+abilList = ""
+-- 物品分类
+class = "Purchasable"
+-- 黄金消耗
+goldcost = 2
+-- 购买时间间隔
+stockRegen = 0
+-- 主动使用
+usable = 0
+-- 使用次数
+uses = 0
+
+[IXU2]
+_parent = "tdex"
+-- 界面图标
+Art = "ReplaceableTextures\\CommandButtons\\BTNColdArrows.blp"
+-- 按钮位置(Y)
+"Buttonpos:2" = 2
+-- 说明
+Description = "如果你曾经合成过某半超神器，那么我可以卖这件东西给你，助你于合成超神器一臂之力，走私而来的商品价格很贵哦～。不过我此生未见过虚界至宝琉璃璞玉，若你能让我看到，那么我可以给你低价优惠！|n|n价格：|n7000木头（无琉璃璞玉）|n3000木头（有琉璃璞玉）"
+-- 热键
+Hotkey = ""
+-- 名字
+Name = "购买|cffff00ff【神】星|r - LvMax"
+-- 提示工具 - 基础
+Tip = "购买|cffff00ff【神】星|r - LvMax"
+-- 提示工具 - 扩展
+Ubertip = "如果你曾经合成过某半超神器，那么我可以卖这件东西给你，助你于合成超神器一臂之力，走私而来的商品价格很贵哦～。不过我此生未见过虚界至宝琉璃璞玉，若你能让我看到，那么我可以给你低价优惠！|n|n价格：|n7000木头（无琉璃璞玉）|n3000木头（有琉璃璞玉）"
+-- 技能
+abilList = ""
+-- CD间隔组
+cooldownID = ""
+-- 黄金消耗
+goldcost = 1
+-- 木材消耗
+lumbercost = 0
+-- 购买时间间隔
+stockRegen = 10
+
+
+[IXU3]
+_parent = "tdex"
+-- 界面图标
+Art = "ReplaceableTextures\\CommandButtons\\BTNColdArrows.blp"
+-- 按钮位置(Y)
+"Buttonpos:2" = 2
+-- 说明
+Description = "如果你曾经合成过某半超神器，那么我可以卖这件东西给你，助你于合成超神器一臂之力，走私而来的商品价格很贵哦～。不过我此生未见过虚界至宝琉璃璞玉，若你能让我看到，那么我可以给你低价优惠！|n|n价格：|n7000木头（无琉璃璞玉）|n3000木头（有琉璃璞玉）"
+-- 热键
+Hotkey = ""
+-- 名字
+Name = "购买|cFFCC3399【神】雷|r - LvMax"
+-- 提示工具 - 基础
+Tip = "购买|cFFCC3399【神】雷|r - LvMax"
+-- 提示工具 - 扩展
+Ubertip = "如果你曾经合成过某半超神器，那么我可以卖这件东西给你，助你于合成超神器一臂之力，走私而来的商品价格很贵哦～。不过我此生未见过虚界至宝琉璃璞玉，若你能让我看到，那么我可以给你低价优惠！|n|n价格：|n7000木头（无琉璃璞玉）|n3000木头（有琉璃璞玉）"
+-- 技能
+abilList = ""
+-- CD间隔组
+cooldownID = ""
+-- 黄金消耗
+goldcost = 1
+-- 木材消耗
+lumbercost = 0
+-- 购买时间间隔
+stockRegen = 10
+
+[IXU4]
+_parent = "tdex"
+-- 界面图标
+Art = "ReplaceableTextures\\CommandButtons\\BTNColdArrows.blp"
+-- 按钮位置(Y)
+"Buttonpos:2" = 2
+-- 说明
+Description = "如果你曾经合成过某半超神器，那么我可以卖这件东西给你，助你于合成超神器一臂之力，走私而来的商品价格很贵哦～。不过我此生未见过虚界至宝琉璃璞玉，若你能让我看到，那么我可以给你低价优惠！|n|n价格：|n7000木头（无琉璃璞玉）|n3000木头（有琉璃璞玉）"
+-- 热键
+Hotkey = ""
+-- 名字
+Name = "购买|cFF33FF33【神】光|r - LvMax"
+-- 提示工具 - 基础
+Tip = "购买|cFF33FF33【神】光|r - LvMax"
+-- 提示工具 - 扩展
+Ubertip = "如果你曾经合成过某半超神器，那么我可以卖这件东西给你，助你于合成超神器一臂之力，走私而来的商品价格很贵哦～。不过我此生未见过虚界至宝琉璃璞玉，若你能让我看到，那么我可以给你低价优惠！|n|n价格：|n7000木头（无琉璃璞玉）|n3000木头（有琉璃璞玉）"
+-- 技能
+abilList = ""
+-- CD间隔组
+cooldownID = ""
+-- 黄金消耗
+goldcost = 1
+-- 木材消耗
+lumbercost = 0
+-- 购买时间间隔
+stockRegen = 10
+
+[IXU5]
+_parent = "tdex"
+-- 界面图标
+Art = "ReplaceableTextures\\CommandButtons\\BTNColdArrows.blp"
+-- 按钮位置(Y)
+"Buttonpos:2" = 2
+-- 说明
+Description = "如果你曾经合成过某半超神器，那么我可以卖这件东西给你，助你于合成超神器一臂之力，走私而来的商品价格很贵哦～。不过我此生未见过虚界至宝琉璃璞玉，若你能让我看到，那么我可以给你低价优惠！|n|n价格：|n7000木头（无琉璃璞玉）|n3000木头（有琉璃璞玉）"
+-- 热键
+Hotkey = ""
+-- 名字
+Name = "购买|cff6699ff【神】暗|r - LvMax"
+-- 提示工具 - 基础
+Tip = "购买|cff6699ff【神】暗|r - LvMax"
+-- 提示工具 - 扩展
+Ubertip = "如果你曾经合成过某半超神器，那么我可以卖这件东西给你，助你于合成超神器一臂之力，走私而来的商品价格很贵哦～。不过我此生未见过虚界至宝琉璃璞玉，若你能让我看到，那么我可以给你低价优惠！|n|n价格：|n7000木头（无琉璃璞玉）|n3000木头（有琉璃璞玉）"
+-- 技能
+abilList = ""
+-- CD间隔组
+cooldownID = ""
+-- 黄金消耗
+goldcost = 1
+-- 木材消耗
+lumbercost = 0
+-- 购买时间间隔
+stockRegen = 10
+
+[IXU6]
+_parent = "tdex"
+-- 界面图标
+Art = "ReplaceableTextures\\CommandButtons\\BTNColdArrows.blp"
+-- 按钮位置(Y)
+"Buttonpos:2" = 2
+-- 说明
+Description = "如果你曾经合成过某半超神器，那么我可以卖这件东西给你，助你于合成超神器一臂之力，走私而来的商品价格很贵哦～。不过我此生未见过虚界至宝琉璃璞玉，若你能让我看到，那么我可以给你低价优惠！|n|n价格：|n7000木头（无琉璃璞玉）|n3000木头（有琉璃璞玉）"
+-- 热键
+Hotkey = ""
+-- 名字
+Name = "购买|cFFCC3300【神】焱|r - LvMax"
+-- 提示工具 - 基础
+Tip = "购买|cFFCC3300【神】焱|r - LvMax"
+-- 提示工具 - 扩展
+Ubertip = "如果你曾经合成过某半超神器，那么我可以卖这件东西给你，助你于合成超神器一臂之力，走私而来的商品价格很贵哦～。不过我此生未见过虚界至宝琉璃璞玉，若你能让我看到，那么我可以给你低价优惠！|n|n价格：|n7000木头（无琉璃璞玉）|n3000木头（有琉璃璞玉）"
+-- 技能
+abilList = ""
+-- CD间隔组
+cooldownID = ""
+-- 黄金消耗
+goldcost = 1
+-- 木材消耗
+lumbercost = 0
+-- 购买时间间隔
+stockRegen = 10
+
+
+[IXU6]
+_parent = "tdex"
+-- 界面图标
+Art = "ReplaceableTextures\\CommandButtons\\BTNColdArrows.blp"
+-- 按钮位置(Y)
+"Buttonpos:2" = 2
+-- 说明
+Description = "如果你曾经合成过某半超神器，那么我可以卖这件东西给你，助你于合成超神器一臂之力，走私而来的商品价格很贵哦～。不过我此生未见过虚界至宝琉璃璞玉，若你能让我看到，那么我可以给你低价优惠！|n|n价格：|n7000木头（无琉璃璞玉）|n3000木头（有琉璃璞玉）"
+-- 热键
+Hotkey = ""
+-- 名字
+Name = "购买|cFF6699FF【神】冰|r - LvMax"
+-- 提示工具 - 基础
+Tip = "购买|cFF6699FF【神】冰|r - LvMax"
+-- 提示工具 - 扩展
+Ubertip = "如果你曾经合成过某半超神器，那么我可以卖这件东西给你，助你于合成超神器一臂之力，走私而来的商品价格很贵哦～。不过我此生未见过虚界至宝琉璃璞玉，若你能让我看到，那么我可以给你低价优惠！|n|n价格：|n7000木头（无琉璃璞玉）|n3000木头（有琉璃璞玉）"
+-- 技能
+abilList = ""
+-- CD间隔组
+cooldownID = ""
+-- 黄金消耗
+goldcost = 1
+-- 木材消耗
+lumbercost = 0
+-- 购买时间间隔
+stockRegen = 10
